--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
    <P> <h1>hell if i say no</h1></P>
-   <P>Here is new feature <button </P>
+   <P>Here is new feature <button>a button </button> </P>
 </body>
 </html>
